waybar/.config/waybar/style.css
@import "catppuccin_mocha.css";


* {
    font-family: "Fira Sans", FontAwesome, Roboto, sans-serif;
    font-size: 14px;
}

#waybar {
    background-color: transparent;
    transition-property: background-color;
    background-color: @crust;
    color: @text;
    opacity: 0.8;
}

#waybar.hidden {
    opacity: 0.2;
}


/* -----------------------------------------------------
 * Workspaces
 * ----------------------------------------------------- */

#workspaces {
    padding: 0;
}


#workspaces button {
    padding: 0px 6px;
    min-width: 16px;
    margin-left: 3px;
    border-radius: 6px;
    transition: all 0.15s ease;
}

#workspaces button:hover,
#workspaces button.active,
#idle_inhibitor.activated {
    background: @flamingo;
    color: @base;
}

#workspaces button.active {
    min-width: 48px;
}

#workspaces button.urgent {
    background-color: @red;
}


/* -----------------------------------------------------
 * Modules
 * ----------------------------------------------------- */

.modules-left {
    margin-left: 12px
}

.modules-right {
    margin-right: 12px;
}

.modules-left,
.modules-right,
.modules-center {
    margin-top: 6px;
    margin-bottom: 6px;
}

.module {
    padding: 0px 6px;
    border-radius: 6px;
    transition: all 0.1s ease;
}

#mode {
    background-color: #64727D;
    box-shadow: inset 0 -3px #ffffff;
}

#clock {
    min-width: 38px;
}

#battery {
    background-color: #ffffff;
    color: #000000;
}

#battery.charging, #battery.plugged {
    background-color: #26A65B;
}

@keyframes blink {
    to {
        background-color: #ffffff;
        color: #000000;
    }
}

/* Using steps() instead of linear as a timing function to limit cpu usage */
#battery.critical:not(.charging) {
    background-color: @red;
    animation-name: blink;
    animation-duration: 0.5s;
    animation-timing-function: steps(12);
    animation-iteration-count: infinite;
    animation-direction: alternate;
}

#network.disconnected {
    background-color: @red;
}

#bluetooth.off {
    background-color: transparent;
    padding: 0px;
    margin: 0px;
}

#temperature.critical {
    background-color: @red;
}

#tray {
    background-color: @surface0;
    border-radius: 6px;
}

#tray > .passive {
    -gtk-icon-effect: dim;
}

#tray > .needs-attention {
    -gtk-icon-effect: highlight;
    background-color: @red;
}

#keyboard-state > label.locked {
    background: rgba(0, 0, 0, 0.2);
}

#scratchpad {
    background: rgba(0, 0, 0, 0.2);
}

#scratchpad.empty {
	background-color: transparent;
}

#privacy {
    padding: 0;
}

#privacy-item {
    padding: 0 5px;
    color: white;
}

#privacy-item.screenshare {
    background-color: @red;
}

#privacy-item.audio-in {
    background-color: #1ca000;
}

#privacy-item.audio-out {
    background-color: #0069d4;
}

#custom-notification {
    font-family: "FiraCode Nerd Font";
}

#custom-shade:hover,
#custom-power:hover,
#clock:hover,
#pulseaudio:hover,
#wireplumber:hover,
#bluetooth:hover,
#network:hover,
#power-profiles-daemon:hover,
#idle_inhibitor:hover,
#custom-notification:hover {
    background-color: @surface0;
}

